using js file for data until I can learn Node. added first apparel to data, Bowler Hat

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div id="navbar">
-        
+
     </div>
+
+    <script src="./JSON-Data/apparel.json"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
