--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
 
     </div>
 
-    <script src="./JSON-Data/apparel.json"></script>
+    <div class="items-display">
+        <div id="itemTemplate" class="item">
+            <img src="" alt="">
+        </div>
+    </div>
+
+    <div id="popup">
+        This is the popup
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="./JSON-Data/apparel.js"></script>
+    <script src="./JSON-Data/materials.js"></script>
+    <script src="./JSON-Data/textiles.js"></script>
+    <script src="./JSON-Data/weapons.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
