--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div id="popup">
-        This is the popup
+        
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -28,6 +28,7 @@
     <script src="./JSON-Data/materials.js"></script>
     <script src="./JSON-Data/textiles.js"></script>
     <script src="./JSON-Data/weapons.js"></script>
+    <script src="./display.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
