--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
     </div>
 
     <div id="popup">
-        
+        <div id="popup-name"></div>
+        <div id="popup-description"></div>
+        <div id="popup-img"></div>
+        <div id="popup-type"></div>
+        <div id="popup-subtype"></div>
+        <!-- Popup Wrappers will have class .popup-active when active -->
+        <div id="popup-apparel-wrapper"></div>
+        <div id="popup-equipment-wrapper"></div>
+        <div id="popup-materials-wrapper"></div>
+        <div id="popup-textiles-wrapper"></div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
