more apparel, added market value and resource types. can't do equiptime atm

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div id="pop-app-layer">Layer: <span></span></div>
             <div id="pop-app-worktomake">Work To Make: <span></span></div>
             <div id="pop-app-resourcestomake">Resources To Make: <span></span></div>
+            <div id="pop-app-marketvalue">Market Value: <span></span></div>
         </div>
         <div id="popup-equipment-wrapper"></div>
         <div id="popup-materials-wrapper"></div>
