added styling to popup panel, fixed bug with 'resourcesToMake' displaying

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div id="popup-container">
         <!-- TODO booleans should be shown with the rimworld checkmark or x-mark -->
         <!-- TODO percentages should be shown as a slider -->
-        <div class="popup-info" id="pop-name" data-property="name">Name: <span></span></div>
-        <div class="popup-info" id="pop-description" data-property="description">Description: <span></span></div>
+        <div class="popup-info" id="pop-name" data-property="name"><span></span></div>
+        <div class="popup-info" id="pop-description" data-property="description">"<span></span>"</div>
         <img class="popup-info" id="pop-img" data-property="imageURL" src="" width="64"></img>
         <div class="popup-info" id="pop-type" data-property="type">Type: <span></span></div>
         <div class="popup-info" id="pop-subtype" data-property="subtype">Subtype: <span></span></div>
