--- a/index.html
+++ b/index.html
@@ -22,33 +22,61 @@
     <div id="popup-container">
         <!-- TODO booleans should be shown with the rimworld checkmark or x-mark -->
         <!-- TODO percentages should be shown as a slider -->
-        <div class="popup-info" id="pop-name" data-property="name"><span></span></div>
-        <div class="popup-info" id="pop-description" data-property="description">"<span></span>"</div>
-        <img class="popup-info" id="pop-img" data-property="imageURL" src="" width="64"></img>
-        <div class="popup-info" id="pop-type" data-property="type">Type: <span></span></div>
-        <div class="popup-info" id="pop-subtype" data-property="subtype">Subtype: <span></span></div>
-        <div class="popup-info" id="pop-dlc" data-property="isDLC">Royalty DLC? <span></span></div> <!-- royalty dlc has checkmark or x mark (it looks cool!) -->
-        <!-- Popup Wrappers will have class .popup-active when active -->
-        <div class="popup-wrapper-active" id="popup-apparel-wrapper">
-            <div class="popup-info" id="pop-app-clothingtype" data-property="clothingType">Clothing Type: <span></span></div>
-            <div class="popup-info" id="pop-app-research" data-property="researchRequirement">Research Required: <span></span></div>
-            <div class="popup-info" id="pop-app-special" data-property="special">Special Effect: <span></span></div>
-            <div class="popup-info" id="pop-app-fabric" data-property="fabric">Made with Fabric? <span></span></div>
-            <div class="popup-info" id="pop-app-leather" data-property="leathery">Made with Leather? <span></span></div>
-            <div class="popup-info" id="pop-app-protectionsharp" data-property="protectionSharp">Sharp Protection: <span></span></div>
-            <div class="popup-info" id="pop-app-protectionblunt" data-property="protectionBlunt">Blunt Protection: <span></span></div>
-            <div class="popup-info" id="pop-app-protectionheat" data-property="protectionHeat">Heat Protection: <span></span></div>
-            <div class="popup-info" id="pop-app-insulationheat" data-property="insulationHeat">Heat Insulation: <span></span></div>
-            <div class="popup-info" id="pop-app-insulationcold" data-property="insulationCold">Cold Insulation: <span></span></div>
-            <div class="popup-info" id="pop-app-coverage" data-property="coverage">Covers: <span></span></div>
-            <div class="popup-info" id="pop-app-layer" data-property="layer">Layer: <span></span></div>
-            <div class="popup-info" id="pop-app-worktomake" data-property="workToMake">Work To Make: <span></span></div>
-            <div class="popup-info" id="pop-app-resourcestomake" data-property="resourcesToMake">Resources To Make: <span></span></div>
-            <div class="popup-info" id="pop-app-marketvalue" data-property="marketValue">Market Value: <span></span></div>
+        <div id="popup-info-wrapper">
+
+            <!-- The p-1 class here indicates which position in the flexbox it is -->
+            <div class="p-1">
+                <div class="popup-info" id="pop-name" data-property="name"><span></span></div>
+                <div class="popup-info" id="pop-description" data-property="description">"<span></span>"</div>
+                <img class="popup-info" id="pop-img" data-property="imageURL" src="" width="64"></img>
+                <div class="popup-info" id="pop-type" data-property="type">Type: <span></span></div>
+                <div class="popup-info" id="pop-subtype" data-property="subtype">Subtype: <span></span></div>
+                <div class="popup-info" id="pop-dlc" data-property="isDLC">Royalty DLC? <span></span></div> <!-- royalty dlc has checkmark or x mark (it looks cool!) -->
+                <div class="popup-info" data-property="marketValue">Market Value: <span></span></div>
+                <div class="popup-info" data-property="workToMake">Work To Make: <span></span></div>
+                <div class="popup-info" data-property="resourcesToMake">Resources To Make: <span></span></div>
+            </div>
+
+            <hr>
+
+            <div class="p-3">
+                <!-- Apparel Info -->
+                <div class="popup-info" id="pop-app-clothingtype" data-property="clothingType">Clothing Type: <span></span></div>
+                <div class="popup-info" id="pop-app-research" data-property="researchRequirement">Research Required: <span></span></div>
+                <div class="popup-info" id="pop-app-special" data-property="special">Special Effect: <span></span></div>
+                <div class="popup-info" id="pop-app-fabric" data-property="fabric">Made with Fabric? <span></span></div>
+                <div class="popup-info" id="pop-app-leather" data-property="leathery">Made with Leather? <span></span></div>
+                <div class="popup-info" id="pop-app-protectionsharp" data-property="protectionSharp">Sharp Protection: <span></span></div>
+                <div class="popup-info" id="pop-app-protectionblunt" data-property="protectionBlunt">Blunt Protection: <span></span></div>
+                <div class="popup-info" id="pop-app-protectionheat" data-property="protectionHeat">Heat Protection: <span></span></div>
+                <div class="popup-info" id="pop-app-insulationheat" data-property="insulationHeat">Heat Insulation: <span></span></div>
+                <div class="popup-info" id="pop-app-insulationcold" data-property="insulationCold">Cold Insulation: <span></span></div>
+                <div class="popup-info" id="pop-app-coverage" data-property="coverage">Covers: <span></span></div>
+                <div class="popup-info" id="pop-app-layer" data-property="layer">Layer: <span></span></div>
+                <!-- Weapon / Equipment Info -->
+                <div class="popup-info" data-property="mode">Mode: <span></span></div>
+                <div class="popup-info" data-property="class">Class: <span></span></div>
+                <div class="popup-info" data-property="damage">Damage: <span></span></div>
+                <div class="popup-info" data-property="armorPenetration">Armor Penetration: <span></span></div>
+                <div class="popup-info" data-property="stoppingPower">Stopping Power: <span></span></div>
+                <div class="popup-info" data-property="warmup">Warmup: <span></span></div>
+                <div class="popup-info" data-property="cooldown">Cooldown: <span></span></div>
+                <div class="popup-info" data-property="range">Range: <span></span></div>
+                <div class="popup-info" data-property="burstCount">Burst Count: <span></span></div>
+                <div class="popup-info" data-property="burstTickInterval">Burst Interval (in ticks): <span></span></div>
+                <div class="popup-info" data-property="bulletSpeed">Bullet Speed: <span></span></div>
+                <div class="popup-info" data-property="accuracy_touch">Accuracy (touch): <span></span></div>
+                <div class="popup-info" data-property="accuracy_short">Accuracy (short): <span></span></div>
+                <div class="popup-info" data-property="accuracy_medium">Accuracy (medium): <span></span></div>
+                <div class="popup-info" data-property="accuracy_long">Accuracy (long): <span></span></div>
+                <div class="popup-info" data-property="dps_touch">DPS (touch): <span></span></div>
+                <div class="popup-info" data-property="dps_short">DPS (short): <span></span></div>
+                <div class="popup-info" data-property="dps_medium">DPS (medium): <span></span></div>
+                <div class="popup-info" data-property="dps_long">DPS (long): <span></span></div>
+                <div class="popup-info" data-property="missRadius">Miss Radius: <span></span></div>
+                <div class="popup-info" data-property="blastRadius">Blast Radius: <span></span></div>
+            </div>
         </div>
-        <div id="popup-equipment-wrapper"></div>
-        <div id="popup-materials-wrapper"></div>
-        <div id="popup-textiles-wrapper"></div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
